2026-02 Feature Update for Buszy V3

--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -38,8 +38,24 @@
         display: none;
     }
 
+    #scrollUp {
+        display: none !important;
+    }
+
+    .page-title-wrapper>div>div:first-child {
+        margin-bottom: 0px;
+    }
+
     #cv-bat-subp {
         height: 10vh;
+    }
+
+    .alert-warning p {
+        color: #000;
+        font-size: 16px;
+        overflow-wrap: break-word;
+        line-height: 1.7;
+        margin-bottom: 0rem !important;
     }
 
     body.dark-mode .alert-warning p {
@@ -47,6 +63,7 @@
         font-size: 16px;
         overflow-wrap: break-word;
         line-height: 1.7;
+        margin-bottom: 0rem !important;
     }
 
 
