--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -34,18 +34,6 @@
 </head>
 
 <style>
-    .mobile-bottom-nav {
-        display: none;
-    }
-
-    #scrollUp {
-        display: none !important;
-    }
-
-    .page-title-wrapper>div>div:first-child {
-        margin-bottom: 0px;
-    }
-
     #cv-bat-subp {
         height: 10vh;
     }
@@ -100,25 +88,25 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../buszy.html" class="nav-link">
+                    <a href="pinned.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../about.html" class="nav-link">
+                    <a href="nbs.html" class="nav-link">
                         <i class="fa-solid fa-location-dot"></i>
                         <span>Nearby</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../works-by-nrfz.html" class="nav-link">
+                    <a href="abs.html" class="nav-link">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <span>Search</span>
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="../eicw/eicw.html" class="nav-link active">
+                    <a href="menu.html" class="nav-link active">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
@@ -133,36 +121,40 @@
 
     </nav>
 
-
-
-
     <!-- Mobile Bottom Navigation Bar -->
     <nav class="mobile-bottom-nav">
         <ul>
-            <!-- <li class="active"> -->
             <li>
-                <span class="icon">
-                    <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                </span>
-                <span class="label">Pinned</span>
+                <a href="pinned.html">
+                    <span class="icon">
+                        <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                    </span>
+                    <span class="label">Pinned</span>
+                </a>
             </li>
             <li>
-                <span class="icon">
-                    <i class="fa-solid fa-location-dot"></i>
-                </span>
-                <span class="label">Nearby</span>
+                <a href="nbs.html">
+                    <span class="icon">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </span>
+                    <span class="label">Nearby</span>
+                </a>
             </li>
             <li>
-                <span class="icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </span>
-                <span class="label">Search</span>
+                <a href="abs.html">
+                    <span class="icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </span>
+                    <span class="label">Search</span>
+                </a>
             </li>
             <li class="active">
-                <span class="icon">
-                    <i class="fa-solid fa-bars"></i>
-                </span>
-                <span class="label">Menu</span>
+                <a href="menu.html">
+                    <span class="icon">
+                        <i class="fa-solid fa-bars"></i>
+                    </span>
+                    <span class="label">Menu</span>
+                </a>
             </li>
         </ul>
     </nav>
@@ -201,65 +193,15 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-
-                <!-- <div class="scrollable-tabs-container">
-                    <div class="left-arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                        </svg>
-                    </div>
-
-                    <ul id="scrollable-tabs">
-                        <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                                Pinned</a>
-                        </li>
-
-                        <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
-                        </li>
-
-                        <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
-                        </li>
-
-                        <li>
-                            <a href="ann.html" class="active"><i class="fa-solid fa-bullhorn"></i>
-                                Announcements</a>
-                        </li>
-
-                        <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                                Settings</a>
-                        </li>
-                    </ul>
-
-                    <div class="right-arrow active">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                        </svg>
-
-                    </div>
-                </div> -->
                 <hr>
             </div>
-
         </div>
-
     </section>
 
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
-            <div class="alert alert-warning" role="alert" id="train-alert">
-                <i class="fa-solid fa-bullhorn"></i> Loading train service alerts...
-            </div>
             <div class="list-group">
                 <a href="settings.html#refetch-stops"
                     class="list-group-item list-group-item-action flex-column align-items-start">
@@ -318,36 +260,12 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-social">
-                <a href="https://github.com/nurafianZulkifli" class="social-link">
-                    <i class="fa-brands fa-github" aria-hidden="true"></i>
-                </a>
-                <a href="https://twitter.com/nrfzlkf_" class="social-link">
-                    <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.facebook.com/Nrfnzlkf/" class="social-link">
-                    <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
-                    <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="footer-copy">
-            © 2026 Nurafian Zulkifli
-        </div>
-    </footer>
-
     <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <!-- <script src="../js/navtabs.js"></script> -->
+    <script src="js/mob-navtabs.js"></script>
 
     <script src="buszy-subp.js"></script>
 
@@ -368,69 +286,6 @@
     <script src="../js/utils.js"></script>
 
     <script src="js/ann.js"></script>
-
-    <script>
-        // Hide/show mobile bottom nav on scroll (mobile only)
-        (function () {
-            var lastScrollY = window.scrollY;
-            var nav = document.querySelector('.mobile-bottom-nav');
-            var ticking = false;
-            var isHidden = false;
-
-            function onScroll() {
-                var currentScrollY = window.scrollY;
-                if (window.innerWidth > 600) return; // Only on mobile
-                if (currentScrollY > lastScrollY + 4) {
-                    // Scrolling down
-                    if (!isHidden) {
-                        nav.style.transform = 'translateY(100%)';
-                        nav.style.transition = 'transform 0.3s cubic-bezier(.4,0,.2,1)';
-                        isHidden = true;
-                    }
-                } else if (currentScrollY < lastScrollY - 4) {
-                    // Scrolling up
-                    if (isHidden) {
-                        nav.style.transform = 'translateY(0)';
-                        nav.style.transition = 'transform 0.3s cubic-bezier(.4,0,.2,1)';
-                        isHidden = false;
-                    }
-                }
-                lastScrollY = currentScrollY;
-            }
-
-            window.addEventListener('scroll', function () {
-                if (!ticking) {
-                    window.requestAnimationFrame(function () {
-                        onScroll();
-                        ticking = false;
-                    });
-                    ticking = true;
-                }
-            });
-
-            // Reset nav position on resize
-            window.addEventListener('resize', function () {
-                if (window.innerWidth > 600) {
-                    nav.style.transform = '';
-                    isHidden = false;
-                }
-            });
-        })();
-    </script>
-
-    <script>
-        // Toggle .at-top class based on scroll position
-        function updateBreadcrumbAtTop() {
-            var bc = document.getElementById('floating-breadcrumb');
-            if (window.scrollY <= 0) {
-                bc.classList.add('at-top');
-            } else {
-                bc.classList.remove('at-top');
-            }
-        }
-        window.addEventListener('scroll', updateBreadcrumbAtTop);
-        window.addEventListener('DOMContentLoaded', updateBreadcrumbAtTop);
-    </script>
 
 </body>
 
