--- a/buszy.html
+++ b/buszy.html
@@ -128,19 +128,19 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link active">
+                    <a href="#" class="nav-link active">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="nbs.html" class="nav-link">
+                    <a href="buszy/nbs.html" class="nav-link">
                         <i class="fa-solid fa-location-dot"></i>
                         <span>Nearby</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="abs.html" class="nav-link">
+                    <a href="buszy/abs.html" class="nav-link">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <span>Search</span>
                     </a>
@@ -151,11 +151,6 @@
                         <span>Menu</span>
                     </a>
                 </li>
-                <!-- <li class="nav-item-toggle">
-                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                        <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-                    </a>
-                </li> -->
             </ul>
         </div>
 
@@ -165,7 +160,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li class="active">
-                <a href="pinned.html">
+                <a href="#">
                     <span class="icon">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                     </span>
@@ -173,7 +168,7 @@
                 </a>
             </li>
             <li>
-                <a href="nbs.html">
+                <a href="buszy/nbs.html">
                     <span class="icon">
                         <i class="fa-solid fa-location-dot"></i>
                     </span>
@@ -181,7 +176,7 @@
                 </a>
             </li>
             <li>
-                <a href="abs.html">
+                <a href="buszy/abs.html">
                     <span class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </span>
