--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -125,7 +125,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="pinned.html">
+                <a href="../buszy.html">
                     <span class="icon">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                     </span>
@@ -162,7 +162,6 @@
 
 
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
-
 
     <!-- Title/Breadcrumbs -->
     <section class="about-me-sum clearfix">
@@ -202,6 +201,9 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
+                        <div class="alert alert-warning" role="alert" id="train-alert">
+                <i class="fa-solid fa-bullhorn"></i> Loading train service alerts...
+            </div>
             <div class="list-group">
                 <a href="settings.html#refetch-stops"
                     class="list-group-item list-group-item-action flex-column align-items-start">
