--- a/buszy.html
+++ b/buszy.html
@@ -115,6 +115,15 @@
             margin-top: 5px;
             font-size: 20px;
         }
+
+        .pinned h2 {
+            font-size: 30px;
+            margin-top: 1em;
+            margin-bottom: 0.5em;
+            font-weight: bolder;
+            color: #3b3b3b;
+            text-align: center;
+        }
     }
 </style>
 
